[terra-demographics-banner] Fix banner items overlapping in IE 11

--- a/packages/terra-demographics-banner/src/DemographicsBanner.module.scss
+++ b/packages/terra-demographics-banner/src/DemographicsBanner.module.scss
@@ -58,6 +58,11 @@
     flex: 1;
     margin-bottom: 0;
     margin-top: var(--terra-demographics-banner-person-details-margin-top);
+
+    // IE 11
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      margin-top: 0;
+    }
   }
 
   .preferred-first-name {
@@ -92,6 +97,12 @@
     flex-grow: 1;
     flex-wrap: wrap;
     margin: var(--terra-demographics-banner-content-margin, auto 0.714em);
+
+    // IE 11
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      align-self: center;
+      width: 100%;
+    }
   }
 
   .application-content {
@@ -110,10 +121,20 @@
     .application-content {
       margin-top: 0;
       text-align: right;
+
+      // IE 11
+      @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+        flex-basis: 33.33%;
+      }
     }
 
     .person-name {
       font-size: var(--terra-demographics-banner-large-person-name-font-size, 1.286rem);
+
+      // IE 11
+      @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+        flex-basis: 66.66%;
+      }
     }
 
     .identifiers {
